修改了一下右边

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     <br><br><br>
     <!-- Vision and Mission -->
+    <div class="container">
+    <div class="content">
     <section id="vision">
         <span class="blue_block"></span> 
         <h2>Vision and Mission</h2> <!-- Heading -->
@@ -94,7 +96,12 @@
             
         </div>
     </section>
-    
+    </div>
+
+    <div class="right-sidebar">
+        <span class="blue_block3"></span> 
+    </div>
+</div>
 
     <footer id="contact">
         <div class="contact-container">
