--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <ul>
                 <li><a href="./index.html">About the Group</a></li>
                 <li class="group-members">
-                    <a href="#members">Group Members</a>
+                    <a href="./groupmember.html">Group Members</a>
                     <!-- 额外信息，确保不同内容在不同行 -->
                     <ul class="additional-info hidden"> <!-- 初始隐藏 -->
-                        <li><a href="#bio">siu shing man's bio</a></li> <!-- 在一行上显示 -->
-                        <li><a href="#recruitment">Recruitment</a></li> <!-- 在不同行上显示 -->
+                        <li><a href="./man's bio.html">siu shing man's bio</a></li> <!-- 在一行上显示 -->
+                        <li><a href="./recruitment.html">Recruitment</a></li> <!-- 在不同行上显示 -->
                     </ul>
                 </li>
                 <!-- 其他列表项 -->
