全部初始化一遍了
1

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     </ul>
                 </li>
                 <!-- 其他列表项 -->
-                <li><a href="#research">Research Outcomes</a></li>
-                <li><a href="#design">Design Outcomes</a></li>
-                <li><a href="#achievements">Student Achievements</a></li>
-                <li><a href="#collaborations">Collaborations and Partnerships</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="./research_out.html">Research Outcomes</a></li>
+                <li><a href="./design_out.html">Design Outcomes</a></li>
+                <li><a href="./student_achievement.html">Student Achievements</a></li>
+                <li><a href="./Collaborations_Partnerships.html">Collaborations and Partnerships</a></li>
+                <li><a href="./Contact.html">Contact</a></li>
             </ul>
         </nav>
         <h1 class="Siu">
