--- a/recruitment.html
+++ b/recruitment.html
@@ -6,7 +6,7 @@
     <title>Research and Design Group</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/man's bio.css">
+    <link rel="stylesheet" href="./css/recruitment.css">
     <script src="./js/script.js"></script>
 </head>
 <body>
