改好个人简介

--- a/recruitment.html
+++ b/recruitment.html
@@ -20,8 +20,32 @@
         <div>></div>
         <div>Recruitment</div>
     </div>
-</div>
 
+</div>
+    <div class="head1">
+    <h1 class="Siu">
+        Recruitment
+        <span class="title-line"></span> <!-- 水平线 -->
+    </h1>
+    </div>
+
+    <div class="container">
+        <div class="left">         
+            <span class="blue_block1"></span> 
+        </div>
+        <div class="mid">
+        <div class="tabs">
+            <div class="tab" id="faculties">Faculties</div>
+            <div class="tab active" id="students">Students</div>
+          </div>
+          <div class="content">
+            <p>Associate/Assistant Research Professors</p>
+          </div>
+        </div>
+        <div class="right">        
+            <span class="blue_block3"></span>
+        </div>
+    </div>
 
     <footer id="contact">
         <div class="contact-container">
