开始做研究成果

--- a/recruitment_facuties.html
+++ b/recruitment_facuties.html
@@ -35,8 +35,8 @@
         </div>
         <div class="mid">
             <div class="tabs">
-                <a href="./recruitment_facuties.html"> <div class="tab" id="faculties">Faculties</div></a>
-                <a href="./recruitment.html"><div class="tab active" id="students">Students</div></a>
+                <a href="./recruitment_facuties.html"> <div class="tab active" id="faculties">Faculties</div></a>
+                <a href="./recruitment.html"><div class="tab" id="students">Students</div></a>
             </div>
             
             <div class="content">
