--- a/research_out.html
+++ b/research_out.html
@@ -36,6 +36,21 @@
             <span class="title-line"></span> <!-- 水平线 -->
         </h1>
     </header>
+
+
+    <div class="container">
+        <div class="left">         
+            <span class="blue_block1"></span> 
+        </div>
+        <div class="mid">
+
+        </div>
+        <div class="right">
+        </div>
+
+
+
+
     <footer id="contact">
         <div class="contact-container">
         <div class="contact-content"> <!-- Footer content wrapper -->
