研究成果暂时写完了

--- a/research_out_Conference_Papers.html
+++ b/research_out_Conference_Papers.html
@@ -44,9 +44,9 @@
         </div>
         <div class="mid">
             <div class="tabs">
-                <a href="./research_out.html"> <div class="tab active" id="faculties">Research Projects</div></a>
+                <a href="./research_out.html"> <div class="tab" id="faculties">Research Projects</div></a>
                 <a href="./research_out_Journal_Papers.html"><div class="tab" id="students">Journal Papers</div></a>
-                <a href="./research_out_Conference_Papers.html"><div class="tab" id="students">Conference Papers</div></a>
+                <a href="./research_out_Conference_Papers.html"><div class="tab active" id="students">Conference Papers</div></a>
             </div>
             <div class="project-info">
                 <a href=""><h2>Here is the name of the project</h2></a>
