--- a/research_out.html
+++ b/research_out.html
@@ -49,26 +49,26 @@
                 <a href="./research_out_Conference_Papers.html"><div class="tab" id="students">Conference Papers</div></a>
             </div>
             <div class="project-info">
-                <a href=""><h2>Here is the name of the project</h2></a>
+                <a href="./ResearchOutcomes/ResearchProjects/rp1.html"><h2>Here is the name of the project</h2></a>
                 <p class="underline">Here is a brief introduction to the project</p>
             </div>
             <div class="project-info">
-                <a href=""><h2>Here is the name of the project</h2></a>
+                <a href="./ResearchOutcomes/ResearchProjects/rp1.html"><h2>Here is the name of the project</h2></a>
                 <p class="underline">Here is a brief introduction to the project</p>
             </div>
 
             <div class="project-info">
-                <a href=""><h2>Here is the name of the project</h2></a>
+                <a href="./ResearchOutcomes/ResearchProjects/rp1.html"><h2>Here is the name of the project</h2></a>
                 <p class="underline">Here is a brief introduction to the project</p>
             </div>
             
             <div class="project-info">
-                <a href=""><h2>Here is the name of the project</h2></a>
+                <a href="./ResearchOutcomes/ResearchProjects/rp1.html"><h2>Here is the name of the project</h2></a>
                 <p class="underline">Here is a brief introduction to the project</p>
             </div>
 
             <div class="project-info">
-                <a href=""><h2>Here is the name of the project</h2></a>
+                <a href="./ResearchOutcomes/ResearchProjects/rp1.html"><h2>Here is the name of the project</h2></a>
                 <p class="underline">Here is a brief introduction to the project</p>
             </div>
             
