--- a/latestnews/happniess.html
+++ b/latestnews/happniess.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Research and Design Group</title>
+    <title>latestsnews</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/news.css">
