--- a/design_out_patent.html
+++ b/design_out_patent.html
@@ -45,30 +45,30 @@
         </div>
         <div class="mid">
             <div class="tabs">
-                <a href="./design_out.html"> <div class="tab active" id="faculties">Design Projects</div></a>
-                <a href="./design_out_patent.html"><div class="tab" id="students">Patents</div></a>
+                <a href="./design_out.html"> <div class="tab" id="faculties">Design Projects</div></a>
+                <a href="./design_out_patent.html"><div class="tab active" id="students">Patents</div></a>
             </div>
             <div class="project-info">
-                <a href="./DesignOutcomes/DesignProjects/ds1.html"><h2>Here is the name of the project</h2></a>
+                <a href="./DesignOutcomes/Patents/p1.html"><h2>Here is the name of the project</h2></a>
                 <p class="underline">Here is a brief introduction to the project</p>
             </div>
             <div class="project-info">
-                <a href="./DesignOutcomes/DesignProjects/ds1.html"><h2>Here is the name of the project</h2></a>
+                <a href="./DesignOutcomes/Patents/p1.html"><h2>Here is the name of the project</h2></a>
                 <p class="underline">Here is a brief introduction to the project</p>
             </div>
 
             <div class="project-info">
-                <a href="./DesignOutcomes/DesignProjects/ds1.html"><h2>Here is the name of the project</h2></a>
+                <a href="./DesignOutcomes/Patents/p1.html"><h2>Here is the name of the project</h2></a>
                 <p class="underline">Here is a brief introduction to the project</p>
             </div>
             
             <div class="project-info">
-                <a href="./DesignOutcomes/DesignProjects/ds1.html"><h2>Here is the name of the project</h2></a>
+                <a href="./DesignOutcomes/Patents/p1.html"><h2>Here is the name of the project</h2></a>
                 <p class="underline">Here is a brief introduction to the project</p>
             </div>
 
             <div class="project-info">
-                <a href="./DesignOutcomes/DesignProjects/ds1.html"><h2>Here is the name of the project</h2></a>
+                <a href="./DesignOutcomes/Patents/p1.html"><h2>Here is the name of the project</h2></a>
                 <p class="underline">Here is a brief introduction to the project</p>
             </div>
             
