--- a/student_achievement_Awards.html
+++ b/student_achievement_Awards.html
@@ -43,8 +43,8 @@
         <div class="mid">
 
             <div class="tabs">
-                <a href="./student_achievement.html"> <div class="tab active" id="faculties">Scholarships</div></a>
-                <a href="./student_achievement_Awards.html"><div class="tab" id="students">Awards</div></a>
+                <a href="./student_achievement.html"> <div class="tab" id="faculties">Scholarships</div></a>
+                <a href="./student_achievement_Awards.html"><div class="tab active" id="students">Awards</div></a>
                 <a href="./student_achievement_Admissions_to_Top_Universities.html"><div class="tab" id="students">Admissions to Top Universities</div></a>
                 <a href="./student_achievement_Career_Development.html"><div class="tab" id="students">Career Development</div></a>
             </div>
@@ -54,7 +54,7 @@
                 <div class="news-item">
                     <a href="./latestnews/happniess.html">
                     <div class="news-image">
-                        <img src="./img/StudentAchievement/Scholarships/Rectangle 158.png" alt="News 1">
+                        <img src="./img/StudentAchievement/Awards/Rectangle 158.png" alt="News 1">
                     </div>
                     <div class="news-content">
                         <p class="date">November 16, 2023</p>
@@ -66,7 +66,7 @@
                 <div class="news-item">
                     <a href="./latestnews/happniess.html">
                     <div class="news-image">
-                        <img src="./img/StudentAchievement/Scholarships/Rectangle 158.png" alt="News 1">
+                        <img src="./img/StudentAchievement/Awards/Rectangle 158.png" alt="News 1">
                     </div>
                     <div class="news-content">
                         <p class="date">November 16, 2023</p>
@@ -79,7 +79,7 @@
                 <div class="news-item">
                     <a href="./latestnews/happniess.html">
                     <div class="news-image">
-                        <img src="./img/StudentAchievement/Scholarships/Rectangle 158.png" alt="News 1">
+                        <img src="./img/StudentAchievement/Awards/Rectangle 158.png" alt="News 1">
                     </div>
                     <div class="news-content">
                         <p class="date">November 16, 2023</p>
@@ -91,7 +91,7 @@
                 <div class="news-item">
                     <a href="./latestnews/happniess.html">
                     <div class="news-image">
-                        <img src="./img/StudentAchievement/Scholarships/Rectangle 158.png" alt="News 1">
+                        <img src="./img/StudentAchievement/Awards/Rectangle 158.png" alt="News 1">
                     </div>
                     <div class="news-content">
                         <p class="date">November 16, 2023</p>
@@ -102,7 +102,7 @@
                 <div class="news-item">
                     <a href="./latestnews/happniess.html">
                     <div class="news-image">
-                        <img src="./img/StudentAchievement/Scholarships/Rectangle 158.png" alt="News 1">
+                        <img src="./img/StudentAchievement/Awards/Rectangle 158.png" alt="News 1">
                     </div>
                     <div class="news-content">
                         <p class="date">November 16, 2023</p>
