--- a/StudentAchievement/Awards/aw1.html
+++ b/StudentAchievement/Awards/aw1.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>DesignProjects</title>
+    <title>Awards</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/footer.css">
     <link rel="stylesheet" href="../../css/aw.css">
@@ -16,9 +16,9 @@
 <div class="header">
     <!-- 新的 div 包裹中间内容 -->
     <div class="header-middle">
-        <a href="../../design_out.html"><div>Students Achievements</div></a>
+        <a href="../../student_achievement_Awards.html"><div>Students Achievements</div></a>
         <div>></div>
-        <div>Scholarships</div>
+        <div>Awards</div>
     </div>
 </div>
 
@@ -27,25 +27,15 @@
     <div class="left"><div class="left-bar"></div> <!-- 蓝条 --></div>
     <!-- Main content -->
     <div class="mid">
-        Here is the name of the project
-        <h5>National Biblio. Data</h5>
+        The position here is the title of the article
+        <p class="date">February 28, 2018</p>
         <p class="Abstract">
             Focus on interaction design research on multi-channel perception and consciousness presentation. Currently, it includes two research directions: dream visualization neuroscience and.
         </p>
-        
-        <h5>Research Direction</h5>
-       <p>Nadream visualization and neuroscience.</p>
-       <img src="../../img/DesignOutcomes/DesignProjects/Rectangle 154.png" class="full-width-image" alt="Description of the image">
+       <img src="../../img/StudentAchievement/Awards/Rectangle172.png" class="full-width-image" alt="Description of the image">
     </div>
 
     <div class="right">
-
-        <div class="text-content">
-        <p class="size1">People</p>
-        <p class="size2">Courtney Henry</p>
-        </div>
-
-        <span class="blue_block3"></span>
     </div>
     
 </div>
