--- a/Collaborations_Partnerships.html
+++ b/Collaborations_Partnerships.html
@@ -36,7 +36,68 @@
             <span class="title-line"></span> <!-- 水平线 -->
         </h1>
     </header>
-    
+
+
+
+
+
+
+
+    <div class="container">
+        <div class="mid">
+            <div class="tabs">
+                <a href="./Collaborations_Partnerships.html"> <div class="tab active" id="faculties">Collaborations and Partnerships</div></a>
+                <a href="./Collaborations_Partnerships_Opportunities for Collaborations.html"><div class="tab" id="students">Opportunities for Collaborations</div></a>
+            </div>
+
+            <div class="content-with-bar">
+                <div class="left-bar"></div> <!-- 蓝条 -->
+                <div class="content-image">
+                    <img src="./img/Collaborations_Partnerships/p1.jpg" alt="description" class="image"> <!-- 替换为实际图片链接 -->
+                </div>
+                <div class="content">
+                    <div class="content-header">Here is the name of the partner</div> <!-- 标题 -->
+                    <div class="content-date">February 28, 2018</div> <!-- 日期 -->
+                    <div class="content-description">Here is the profile of the partners and an introduction to the cooperation</div> <!-- 简短描述 -->
+                </div>
+            </div>
+
+            <div class="content-with-bar">
+                <div class="left-bar"></div> <!-- 蓝条 -->
+                <div class="content-image">
+                    <img src="./img/Collaborations_Partnerships/p2.jpg" alt="description" class="image"> <!-- 替换为实际图片链接 -->
+                </div>
+                <div class="content">
+                    <div class="content-header">Here is the name of the partner</div> <!-- 标题 -->
+                    <div class="content-date">February 28, 2018</div> <!-- 日期 -->
+                    <div class="content-description">Here is the profile of the partners and an introduction to the cooperation</div> <!-- 简短描述 -->
+                </div>
+            </div>
+
+
+            <div class="content-with-bar">
+                <div class="left-bar"></div> <!-- 蓝条 -->
+                <div class="content-image">
+                    <img src="./img/Collaborations_Partnerships/p2.jpg" alt="description" class="image"> <!-- 替换为实际图片链接 -->
+                </div>
+                <div class="content">
+                    <div class="content-header">Here is the name of the partner</div> <!-- 标题 -->
+                    <div class="content-date">February 28, 2018</div> <!-- 日期 -->
+                    <div class="content-description">Here is the profile of the partners and an introduction to the cooperation</div> <!-- 简短描述 -->
+                </div>
+            </div>
+
+            <br><br><br><br><br>
+        </div>
+        <div class="right"></div>
+    </div>
+
+
+
+
+
+
+
     <footer id="contact">
         <div class="contact-container">
         <div class="contact-content"> <!-- Footer content wrapper -->
