按照老师的要求小小的修改了一些内容
1

--- a/DesignOutcomes/DesignProjects/ds1.html
+++ b/DesignOutcomes/DesignProjects/ds1.html
@@ -24,11 +24,11 @@
 
 
 <div class="container">
-    <div class="left"><div class="left-bar"></div> <!-- 蓝条 --></div>
+    <div class="left"></div>
     <!-- Main content -->
     <div class="mid">
         Here is the name of the project
-        <h5>National Biblio. Data</h5>
+        <h5>Introduction</h5>
         <p class="Abstract">
             Focus on interaction design research on multi-channel perception and consciousness presentation. Currently, it includes two research directions: dream visualization neuroscience and.
         </p>
