--- a/latestnews/happniess.html
+++ b/latestnews/happniess.html
@@ -22,13 +22,12 @@
     </div>
 </div>
 
-
-    <!-- Image section -->
+<!-- 图片 -->
     <div class="image-container">
         <img src="../img/latestsnews/Rectangle 78.png" alt="Person standing in front of a blue wall">
     </div>
 
-    <!-- Main content -->
+<!-- 主要内容 -->
     <div class="main">
         <!-- 包含标题和蓝条的容器 -->
         <div class="header-wrapper">
@@ -51,14 +50,14 @@
     
     <footer id="contact">
         <div class="contact-container">
-        <div class="contact-content"> <!-- Footer content wrapper -->
+        <div class="contact-content"> 
             <h2>Contact Us</h2>
-            <p>Email: Newpath.Simmons@example.com</p> <!-- Email information -->
-            <p>Phone: +1(555)4444429</p> <!-- Phone information -->
-            <p>Address: 3517 W. Gray St. Utica, Pennsylvania 57867</p> <!-- Address information -->
+            <p>Email: Newpath.Simmons@example.com</p> 
+            <p>Phone: +1(555)4444429</p>
+            <p>Address: 3517 W. Gray St. Utica, Pennsylvania 57867</p> 
         </div>
-        <hr class="footer-line"> <!-- Horizontal line -->
-        <p>此处文字为网站备案号000-00011</p> <!-- Chinese text for website record number -->
+        <hr class="footer-line"> 
+        <p>此处文字为网站备案号000-00011</p> 
         </div>
     </footer>
 
