--- a/DesignOutcomes/Patents/p1.html
+++ b/DesignOutcomes/Patents/p1.html
@@ -24,12 +24,12 @@
 
 
 <div class="container">
-    <div class="left"><div class="left-bar"></div> <!-- 蓝条 --></div>
+    <div class="left"></div>
     <!-- Main content -->
     <div class="mid">
         Here is the name of the project
         <br><br>
-        <h5 class="underline">National Biblio. Data</h5>
+        <h5 class="underline">Introduction</h5>
         <div class="biblio-data">
             <div class="left1">
                 <p><span class="title">Office:</span> China</p>
