--- a/ResearchOutcomes/ResearchProjects/rp1.html
+++ b/ResearchOutcomes/ResearchProjects/rp1.html
@@ -24,7 +24,7 @@
 
 
 <div class="container">
-    <div class="left"><div class="left-bar"></div> <!-- 蓝条 --></div>
+    <div class="left"></div>
     <!-- Main content -->
     <div class="mid">
         Here is the name of the project
