小改动已经基本完成
除了最后一个大改（还有header的复制粘贴），其他改动已经完成

--- a/latestnews/happniess.html
+++ b/latestnews/happniess.html
@@ -37,6 +37,7 @@
     
         <!-- 包含段落和蓝条的容器 -->
         <div class="content-with-bar">
+            <div class="content">
             <p>Most of us compare ourselves with anyone we think is happier — a relative, someone 
     we know a lot, or someone we hardly know. As a result, what we do remember is anything that makes others happy, anything 
     that makes ourselves unhappy, totally forgetting that there is something happy in our own life.
@@ -44,6 +45,7 @@
     It is the smallest flaw that would make us complain. And it is the complaint that leads to us becoming 
     unhappy.If one chooses to be happy, he will be blessed; if he chooses to be unhappy, he will be cursed. 
     Happiness is just what you think will make you happy.</p>
+            </div>
             <div class="right-bar"></div> <!-- 蓝条 -->
         </div>
     </div>
