改了所有header和Coll的蓝色bar

--- a/Contact.html
+++ b/Contact.html
@@ -19,20 +19,36 @@
                     <a href="./groupmember.html">Group Members</a>
                     <!-- 额外信息，确保不同内容在不同行 -->
                     <ul class="additional-info hidden"> <!-- 初始隐藏 -->
-                        <li><a href="./man's bio.html">siu shing man's bio</a></li> <!-- 在一行上显示 -->
+                        <li><a href="./man's bio.html">Siu Shing Man's bio</a></li> <!-- 在一行上显示 -->
                         <li><a href="./recruitment.html">Recruitment</a></li> <!-- 在不同行上显示 -->
                     </ul>
                 </li>
                 <!-- 其他列表项 -->
-                <li><a href="./research_out.html">Research Outcomes</a></li>
-                <li><a href="./design_out.html">Design Outcomes</a></li>
+                <li class="group-members">
+                    <a href="./research_out.html">Research Outcomes</a>
+                    <!-- 额外信息，确保不同内容在不同行 -->
+                    <ul class="additional-info hidden"> <!-- 初始隐藏 -->
+                        <li><a href="./research_out.html">Research Projects</a></li> <!-- 在一行上显示 -->
+                        <li><a href="./research_out_Journal_Papers.html">Journal Papers</a></li> <!-- 在不同行上显示 -->
+                        <li><a href="./research_out_Conference_Papers.html">Conference Papers</a></li> <!-- 在不同行上显示 -->
+                    </ul>
+                </li>
+                <li class="group-members">
+                    <a href="./design_out.html">Design Outcomes</a>
+                    <!-- 额外信息，确保不同内容在不同行 -->
+                    <ul class="additional-info hidden"> <!-- 初始隐藏 -->
+                        <li><a href="./design_out.html">Design Project</a></li> <!-- 在一行上显示 -->
+                        <li><a href="./design_out_patent.html">Patents</a></li> <!-- 在不同行上显示 -->
+                    </ul>
+                </li>
+
                 <li><a href="./student_achievement.html">Student Achievements</a></li>
-                <li><a href="./Collaborations_Partnerships.html">Collaborations and Partnerships</a></li>
+                <li><a href="./Collaborations_Partnerships.html">Collaborations</a></li>
                 <li><a href="./Contact.html">Contact</a></li>
             </ul>
         </nav>
         <h1 class="Siu">
-            Contact US
+            Siu Shing Man's Research and Design Group
             <span class="title-line"></span> <!-- 水平线 -->
         </h1>
     </header>
